# LOB-feature-analysis

./: pyproject.toml  requirements.txt
order_flow_imbalance/: ofi_analysis.ipynb  ofi_computation.py
preprocessing/: clickhouse_LOB_time_evolution.py
